# dg-the-datagarden

./: .gitignore  .pre-commit-config.yaml  README.md  README.rst  justfile  pyproject.toml  tox.ini
docs/source/: authentication.rst  conf.py  continent.rst  country.rst  create_new_account.rst  index.rst  querying_the_api.rst  regional_data_model.rst  regional_data_record.rst  the_datagarden_api.rst  working_with_regional_data_model.rst
src/the_datagarden/: __init__.py  cli.py
src/the_datagarden/abc/: api.py  authentication.py  regions.py
src/the_datagarden/api/authentication/: __init__.py  settings.py
src/the_datagarden/api/authentication/credentials/: __init__.py
src/the_datagarden/api/base/: __init__.py
src/the_datagarden/api/regions/: __init__.py  continent.py  country.py
src/the_datagarden/api/regions/base/: __init__.py  settings.py
src/the_datagarden/models/: __init__.py  geojson.py  regional_data.py
tests/: test_cli.py
