[project]
name = "the-datagarden"
version = "0.1.0"
description = "Accessing public data made easy for everyone."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }  # Specifies the MIT license
authors = [
    { name = "Maarten de Ruyter", email = "maarten@the-datagarden.io" }
]
dependencies = [
    "click>=8.1.7",
    "pydantic>=2.9.2",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
]

[project.scripts]
the-datagarden = "the_datagarden.cli:main"
